Contact List Optimization

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.LevelUp"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
